--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,8 @@ webpack.config.prod.js
 package.json
 package-lock.json
 .DS_Store
+webpack.common.js
+webpack.config.js
+webpack.dev.js
+webpack.prod.js
+postcss.config.js
